# rushd

./: LICENSE  README.md  rushd.yaml
products/helloworld/: Cargo.toml  Dockerfile.ingress  TODO.md
products/helloworld.com/: Cargo.toml  Dockerfile.backend  nginx.ingress.conf  stack.yaml
products/helloworld.com/api/types/: Cargo.toml
products/helloworld.com/api/types/src/: lib.rs
products/helloworld.com/backend/infrastructure/: 10_deployment.yaml  20_svc.yaml  30_ingress.yaml
products/helloworld.com/backend/server/src/: main.rs
products/helloworld.com/frontend/: nginx.conf
products/helloworld.com/frontend/infrastructure/: 01_namespace.yaml  20_svc.yaml  30_ingress.yaml
products/helloworld.com/frontend/webui/: index.html  tailwind.config.js
products/helloworld.com/frontend/webui/src/: app.rs  main.rs  routes.rs
products/helloworld/api/types/src/: lib.rs
products/helloworld/backend/infrastructure/: 02_secrets.yaml
products/helloworld/backend/server/: Cargo.toml
products/helloworld/backend/server/src/: main.rs
products/helloworld/frontend/: Dockerfile
products/helloworld/frontend/infrastructure/: 10_deployment.yaml
products/helloworld/frontend/webui/: Cargo.toml
products/helloworld/frontend/webui/src/: app.rs  main.rs
roll/: Cargo.toml
roll/src/: main.rs
rushd/: Cargo.toml
rushd/src/: git.rs  gitignore.rs  main.rs  utils.rs
rushd/src/builder/: artefact.rs  build_context.rs  build_script.rs  build_type.rs  config.rs  mod.rs  spec.rs  templates.rs  variables.rs
rushd/src/cluster/: infrastructure.rs  k8s.rs  mod.rs
rushd/src/container/: container_reactor.rs  docker.rs  mod.rs  service_spec.rs  status.rs
rushd/src/toolchain/: mod.rs  platform.rs
