[package]
name = "roll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.3"
sqlx = { version = "0.7.3", features = [
  "tls-rustls",
  "postgres",
  "sqlite",
  "runtime-tokio",
  "chrono",
  "runtime-async-std-native-tls",
  "rust_decimal",
  "uuid",
] }
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
log = "0.4.20"
