[package]
name = "rushd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
colored = "2.1.0"
futures = "0.3.30"
# tokio-pty-process = "0.4.0"
clap = "4.5.3"
notify = "6.1.1"
dotenv = "0.15.0"
tera = "1.19.1"
lazy_static = "1.4.0"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
glob = "0.3.1"
slug = "0.1.5"
