[workspace]
members = ["api/types", "backend/server", "frontend/webui"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = { version = "0.2.90", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.40"
serde = { version = "1.0.195", features = ["derive"] }
yewdux = "0.10.0"
serde_json = "1.0.111"
serde-wasm-bindgen = "0.6.3"
yew-router = "0.18.0"
validator = { version = "0.16.0", features = ["derive"] }


gloo = "0.11.0"
chrono = { version = "0.4.23", features = ["serde", "wasmbind"] }
dotenv = "0.15.0"
env_logger = "0.11.1"
futures = "0.3.26"

uuid = { version = "1.3.0", features = ["serde", "v4"] }
log = "0.4.20"
tracing-web = "0.1.3"
tracing-subscriber = "0.3.18"