[package]
name = "api_types"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
uuid = { workspace = true }
