[package]
name = "server"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.7.4", features = ["tokio"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
axum-extra = "0.9.2"
tower = "0.4.13"
log = "0.4.20"
dotenv = "0.15.0"
env_logger = "0.11.1"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12.2", default-features = false, features = [
  "json",
  "rustls-tls",
] }
api_types = { path = "../../api/types" }
